--- a/style.css
+++ b/style.css
@@ -9,22 +9,22 @@ body{
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   overflow: hidden;
   background-color: #333;
-  font-size: 14px;
+  font-size: 30px;
   padding-left: 15%;
   width: 100vw;
 }
 
 li {
-  float: left;
+  display: inline;
   font-family: 'Great Vibes' ;
-  font-size: 14px;
+  font-size: 30px;
 }
 
 li a {
-  display: block;
+  display: inline;
   color: white;
   text-align: center;
   padding: 14px 16px;
@@ -39,10 +39,10 @@ li a:hover {
 
 .Title {
   font-family: 'Great Vibes' ;
-  font-size: 100px;
+  font-size: 75px;
   color: #ab0000;
   display: flex;
- align-items: center;
+ align-items: left;
 
 }
 
@@ -51,13 +51,19 @@ li a:hover {
   height: 290px;
 }
 
+.Intro{
+  font-family: 'Great Vibes';
+  font-size: 35px;
+  padding-bottom: 10px;
+}
+
 .TitleSmall {
   font-family: 'Great Vibes' ;
   font-size: 50px;
   color: #ab0000;
   display: flex;
-  align-items: center;
-
+  /* align-items: center; */
+  text-align: center;
 }
 
 .TitleSmall > img{
@@ -100,6 +106,7 @@ background-size: 100% 100%;
   background-size: 100% 100%;
   position: fixed;
   top: 0px;
+  right: 0px;
   height: 100vh;
   width: 15%;
 }
@@ -118,6 +125,7 @@ background-size: 100% 100%;
   background-size: 100% 100%;
   position: fixed;
   top: 0px;
+  right: 0px;
   height: 100vh;
   width: 15%;
 }
@@ -135,13 +143,16 @@ background-size: 100% 100%;
   /* background-size: contain; */
   background-size: 100% 100%;
   position: fixed;
+  right: 0px;
   top: 0px;
   height: 100vh;
   width: 15%;
 }
 
 .centerContent{
-  padding: 20vw;
+  padding-left: 15vw;
+  padding-bottom: 12vw;
+  padding-right: 15vw;
   /* align-content: center; */
 }
 
@@ -164,6 +175,25 @@ background-size: 100% 100%;
   display: flex;
   padding: 15px;
 }
+
+.HomeFooter{
+  display:grid;
+
+  color: white;
+  font-family: Helvetica;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: black;
+  /* //height: 5%; */
+  position: relative;
+  bottom: 0px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  /* left:15%;
+  right: 15%; */
+}
+
 
 .Accountbox{
 padding-left: 20% ;
@@ -194,10 +224,28 @@ font-size: 16px ;
 background-color: #499AB3;
 border: 5px outset red;
 }
+.Response{
+  padding-bottom: 30px;
+}
+.Response > #textboxid
+{
+    height:200px;
+    width: 450px;
+    font-size:14pt;
+}
+#subdes
+{
+  font-family: 'Great Vibes' ;
+  font-size:14pt;
+  border: black 4px;
+}
+
 
 .Profile{
   display: grid;
-  padding-left: 10% ;
+  /* margin-left:  10% ;
+  margin-right: 10% ; */
+  padding-left:  10% ;
   padding-right: 10% ;
   text-align: left;
   font-family: Helvetica;
@@ -205,54 +253,64 @@ border: 5px outset red;
   font-size: 16px ;
   background-color: #499AB3;
   border: 5px outset red;
-  grid-column: 3;
-  grid-column-gap: 10px;
+  grid-column: 5;
+  grid-column-gap: 15px;
   grid-row-gap: 10px;
 }
 
+.Profile > p{
+  font-size: 16px;
+}
+
 .Profilepic{
+  padding-top: 20px;
+  /* width: 300px;
+  height: 400px; */
+  object-fit: cover;
   grid-row-start: 1;
   grid-row-end: 3;
 }
 .Profilepic > img{
-  width: auto;
+  width: 100%;
   height: 100%;
 }
 
 .Name{
   grid-column-start: 2;
-  grid-column-end: 4;
+  grid-column-end: 6;
   grid-row-start: 1;
   grid-row-end: 2;
+  font-family: 'Great Vibes';
+  font-size: 25px;
 }
 .Detailbox1{
   grid-column-start: 2;
-  grid-column-end: 3;
+  grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 3;
 }
 .Detailbox2{
-  grid-column-start: 3;
-  grid-column-end: 4;
+  grid-column-start: 4;
+  grid-column-end: 6;
   grid-row-start: 2;
   grid-row-end: 3;
 }
-.CriminalRecord{
-  grid-column-start: 2;
-  grid-column-end: 4;
+/* .CriminalRecord{
+  grid-column-start:1;
+  grid-column-end: 6;
   grid-row-start: 3;
   grid-row-end: 4;
-}
+} */
 .Lookingfor{
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 6;
   grid-row-start: 4;
   grid-row-end: 5;
 }
 
 .SocialMedia{
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 6;
   grid-row-start: 5;
   grid-row-end: 6;
 }
@@ -265,6 +323,26 @@ border: 5px outset red;
 
 .Gallery{
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 6;
   grid-row-start: 6;
+
+}
+.GalleryInternal{
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-bottom: 20px;
+}
+.GalleryInternal > .galleryitem img {
+  /* object-fit: cover; */
+  height: 200px;
+  width: 100%;
+  /* padding-bottom: 20px; */
+}
+
+#HappyCouples img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+
 }
